--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
+
 {
-  "name": "quantitative-ventures-world-innovators-startup-pitch-competition",
+  "name": "qvwi-pitch-competition",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "lucide-react": "^0.562.0"
+    "build": "esbuild index.tsx --bundle --outfile=dist/index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-router-dom --external:lucide-react && cp index.html dist/ && cp -r metadata.json dist/ 2>/dev/null || :",
+    "start": "esbuild index.tsx --bundle --outfile=index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-router-dom --external:lucide-react --serve=3000"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "esbuild": "^0.24.0"
   }
 }
