--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "esbuild index.tsx --bundle --outfile=dist/index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-router-dom --external:lucide-react && cp index.html dist/ && cp -r metadata.json dist/ 2>/dev/null || :",
-    "start": "esbuild index.tsx --bundle --outfile=index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-router-dom --external:lucide-react --serve=3000"
+    "build": "mkdir -p dist && esbuild index.tsx --bundle --outfile=dist/index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-dom/client --external:react-router-dom --external:lucide-react && cp index.html dist/ && cp -r metadata.json dist/ 2>/dev/null || :",
+    "start": "esbuild index.tsx --bundle --outfile=index.js --format=esm --jsx=automatic --loader:.tsx=tsx --loader:.ts=ts --external:react --external:react-dom --external:react-dom/client --external:react-router-dom --external:lucide-react --serve=3000"
   },
   "devDependencies": {
     "esbuild": "^0.24.0"
